fix: add some dashes and commas, fix text length on mobile

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -101,3 +101,9 @@ input[type='number']::-webkit-outer-spin-button {
 .recharts-tooltip-wrapper {
   z-index: 999;
 }
+
+.truncate-ellipsis {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
